--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - /your_path_to_wallet_dir/:/monero/wallet
     command: 
+        # For reference see: https://github.com/chekist32/monero-wallet-rpc-docker/blob/master/docs/monero-wallet-rpc-man.md
       - "--stagenet" 
       - "--daemon-address=stagenet.community.rino.io:38081"
       - "--trusted-daemon"
